Try to fix bug on iPhone 4 (done)

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,12 +13,6 @@
   --app-height: 100%;
 }
 
-.header-container {
-  background: #0dcaf0;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
-}
-
 ::placeholder {
   color: #ABB1AC;
 }
@@ -134,6 +128,11 @@ footer {
 /*common usage end*/
 
 /*header*/
+.header-container {
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+}
+
 .logo {
   width: $logo-size-main;
 }
@@ -670,16 +669,12 @@ footer {
     transition: 0.5s all ease-out;
   }
 
-  div {
-    display: inline-block;
-  }
-
   div a {
     font-family: "Raleway", sans-serif;
     color: $grey;
     font-size: 22px;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
     transition: 0.5s all ease-out;
